--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facebook-js-sdk",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Simple JavaScript SDK to interact with Facebook API.",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "git+ssh://git@github.com/sohaibilyas/facebook-js-sdk.git"
   },
   "author": "Sohaib Ilyas",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/sohaibilyas/facebook-js-sdk/issues"
   },
