--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "facebook-js-sdk",
-  "version": "0.1.4",
+  "version": "0.2.4",
   "description": "Simple JavaScript SDK to interact with Facebook API.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
