--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "facebook-js-sdk",
-  "version": "0.3.4",
+  "version": "1.0.0",
   "description": "Simple JavaScript SDK to interact with Facebook API.",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/sohaibilyas/facebook-js-sdk#readme",
   "dependencies": {
-    "axios": "^0.20.0"
+    "axios": "^1.7.7"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
