--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
+# Dependencies
 node_modules
-tester
 package-lock.json
+
+# Build outputs
+dist
+build
+
+# Testing
+coverage
+tester
+test-projects
+
+# IDE and Editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Misc
+.cache
+.temp
