--- a/package.json
+++ b/package.json
@@ -1,26 +1,68 @@
 {
   "name": "facebook-js-sdk",
   "version": "1.0.4",
-  "description": "Simple JavaScript SDK to interact with Facebook API.",
-  "main": "src/index.js",
+  "description": "Simple JavaScript/TypeScript SDK to interact with Facebook API",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
+    "build": "tsc",
     "test": "jest",
-    "start": "node index.js"
+    "lint": "eslint 'src/**/*.{js,ts}'",
+    "lint:fix": "eslint 'src/**/*.{js,ts}' --fix",
+    "format": "prettier --write 'src/**/*.{js,ts}'",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/sohaibilyas/facebook-js-sdk.git"
+    "url": "git+https://github.com/sohaibilyas/facebook-js-sdk.git"
   },
+  "keywords": [
+    "facebook",
+    "sdk",
+    "api",
+    "oauth",
+    "graph-api",
+    "typescript",
+    "javascript"
+  ],
   "author": "Sohaib Ilyas",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/sohaibilyas/facebook-js-sdk/issues"
   },
   "homepage": "https://github.com/sohaibilyas/facebook-js-sdk#readme",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "dependencies": {
     "axios": "^1.7.7"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.24",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.2.6",
+    "typescript": "^5.5.0"
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
